nav bar vertical spacing error officially fixed (the proper way). Favorites page finished

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -15,6 +15,11 @@ button {
   border: none;
 }
 
+p {
+  margin: 0;
+  padding: 0;
+}
+
 a {
     text-decoration: none;
     color: black;
@@ -295,7 +300,7 @@ background: linear-gradient(to left, #29ABE2, #0000FF);
 
 #nav_bar {
   background: white;
-  height: 150px;
+  height: 154px;
 }
 
 #nav_bar_logo {
@@ -452,16 +457,16 @@ float: right;
   cursor: pointer;
 }
 
-#feed_cont {
+.feed_cont {
   background: linear-gradient(to left, rgba(0, 0, 255, 0.05), rgba(41, 171, 226, 0.05));
   padding-bottom: 200px;
+  overflow: auto;
 }
 
 #feed_submit {
     text-align: center;
     background: linear-gradient(to right, rgba(0, 0, 255, 0.1), rgba(41, 171, 226, 0.1));
-    margin-top: 4px;
-    padding: 10px 0;
+    padding: 12pt 0;
     -webkit-user-select: none;  /* Chrome all / Safari all */
  -moz-user-select: none;     /* Firefox all */
  -ms-user-select: none;      /* IE 10+ */
@@ -482,7 +487,6 @@ float: right;
   font-family: 'Roboto', sans-serif;
   font-weight: bolder;
   font-size: 12pt;
-  margin: 4px 0 ;
 }
 
 
@@ -583,15 +587,11 @@ float: right;
   background-color: green;
 }
 
-.post_user > p, .post_text > p {
-  margin: 0;
-}
-
 .post_text{
     font-family: 'nunito',sans-serif;
     font-size: 12pt;
     font-weight: lighter;
-    width: 90%;
+    width: 80%;
     margin-top: 0;
     background-color: #CEDFE7;
     padding: 10px;
